Upgrading IntelliJ to 2021.2.2, Gradle to 6.6, IntelliJ Gradle plugin to 1.2.0; Restructuring of `build.gradle` file to unify with IJ Platform Plugin template.
### Added

- Restructured `build.gradle` file to extract all variables into `gradle.properties` file.
- Adding ability to publish to different channels based on SemVer pre-release labels.
- Adding [JetBrains Plugin Signing](https://plugins.jetbrains.com/docs/intellij/plugin-signing.html)
- Update Dependabot to include Gradle dependencies.
- Adding GitHub build & release workflows.
- Adding JetBrains Qodana (experimental, testing only)
- Adding Apache License 2.0

### Changed

- Upgrading Gradle to 6.6
- Upgrading IntelliJ to 2021.2.2
- Upgrading IntelliJ Gradle plugin to 1.2.0

--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,11 @@
 *.ipr
 *.iws
 .gradle/
-.venv/
 build/
 gradle/
 out/
-uploads/
 gradlew*
+jetbrainsCredentials.gradle
+private.pem
+chain.crt
 *.DS_Store
