--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,11 +36,20 @@ jobs:
           ${{ github.event.release.body }}
           EOM`"
 
-      # Publish the plugin to the Marketplace
-      - name: Publish Plugin
-        env:
-          PUBLISH_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
-        run: ./gradlew publishPlugin
+      ### TODO (ChrisCarini) - Disable publishing to JetBrains Marketplace in this workflow.
+      ######################################################################################
+      ###                                     WARNING                                     ##
+      ######################################################################################
+      ###  We intentionally do not want to publish the plugin to the Marketplace as this
+      ###  plugin is a Proof-of-Concept for exfiltrating code from within IntelliJ.
+      ## Publish the plugin to the Marketplace
+      #- name: Publish Plugin
+      #  env:
+      #    PUBLISH_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
+      #  run: ./gradlew publishPlugin
+      ######################################################################################
+      ###                                     WARNING                                     ##
+      ######################################################################################
 
       # Upload artifact as a release asset
       - name: Upload Release Asset
