--- a/gradle.properties
+++ b/gradle.properties
@@ -6,12 +6,10 @@ pluginName = 'intellij-code-exfiltration'
 # SemVer format -> https://semver.org
 pluginVersion = 0.4.4
 
-### I DO NOT MAKE USE OF SINCE/UNTIL IN THIS PLUGIN.
 ## See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 ## for insight into build numbers and IntelliJ Platform versions.
-#pluginSinceBuild = 203
-#pluginUntilBuild = 212.*
-
+pluginSinceBuild = 233
+pluginUntilBuild = 233.*
 # Plugin Verifier integration -> https://github.com/JetBrains/gradle-intellij-plugin#plugin-verifier-dsl
 # See https://jb.gg/intellij-platform-builds-list for available build versions
 pluginVerifierIdeVersions = 2023.3.4,LATEST-EAP-SNAPSHOT
