--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 *.ipr
 *.iws
 .gradle/
+.qodana/
+.shelf/
 build/
 gradle/
 out/
@@ -10,3 +12,6 @@ jetbrainsCredentials.gradle
 private.pem
 chain.crt
 *.DS_Store
+.idea/
+.installedPlugins/
+.intellijPlatform/
